test/spec_vectors/simd_i8x16_arith/fail/module_4.wat
(module (func $i8x16.neg-arg-empty (result v128) (i8x16.neg)))